--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,4 +43,4 @@ jobs:
       uses: JamesIves/github-pages-deploy-action@v4
       with:
         branch: github-pages
-        folder: dist/woordle
+        folder: dist/
